    [#] FileUtils::makeLocalCopyOfResource() will also create the local_path directory using QDir::mkpath() if it does not exist.
    [#] FileUtils::makeLocalCopyOfResource()'s errorMsg parameter is no longer compulsory.
    [#] Assign default -1 value to Task::lastErrorMessages()'s count parameter.

    [*] Fixed bug in Observer::handle_deletedSubject() where application can sometimes
        crash with "Detected QWeakPointer creation in a QObject being deleted".
    [*] Fixed possible crash in TreeIterator::last() when the TreeIterator was constructed with a null node.
    [*] Fixed potential crash in ~QtilitiesProcess() when it was run in a different thread. Now using deleteLater()
        on backend process.
    [*] Removed buffering done in QtilitiesProcess. See issue #99 for details. This led to the removal of
        QtilitiesProcess::setLineBreakStrings(), QtilitiesProcess::lineBreakString(), QtilitiesProcess::newStandardOutputMessage()
        and QtilitiesProcess::newStandardErrorMessage().
    [*] Fixed Task::completeTask() not always emitting with the correct result. For example, it would
        be emitted with the result set to TaskResultFromBusyStateFailOnError instead of TaskFailed.
    [*] Fixed wrong path printed in FileUtils::makeLocalCopyOfResource() error message when resource file does not exist.
    [*] Fixed "> working directory does not exist, process might fail to start" printing wrongly in
        some cases when using QtilitiesProcess.
    [*] Fixed FileUtils::findFilesUnderDir() matching against directories which are more than one level deep from the search dir.
    [*] Fixed Task::setLastErrorMessagesStackSize() not updating the stack size correctly.

    ============================
    QtilitiesCoreGui:
    ============================
    [+] ObserverWidget/TreeWidget now has a new refresh mode which makes refreshes much smoother than
        previously. The new mode will update the tree very smoothly when the backend tree structure